# Sandevistan

./: README.md  pyproject.toml
docs/: architecture.md  assembly.md  configuration-guide.md  demo-desktop-config.json  deployment-guide.md  display.md  ethics-policy.md  privacy-threat-model.md  production-runbook.md  requirements.md
scripts/: demo_vision_exporter.py  demo_wifi_exporter.py
src/sandevistan/: __init__.py  audit.py  calibration.py  cli.py  config.py  display.py  hud.py  models.py  pipeline.py  retention.py  sync.py
src/sandevistan/ingestion/: __init__.py  ble.py  ble_scanner.py  mmwave.py  mmwave_exporter.py  mmwave_serial.py  orchestrator.py  vision.py  vision_exporter.py  wifi.py  wifi_capture.py  wifi_exporter.py
tests/: test_benchmarks.py  test_ble_scanner.py  test_ingestion_parsers.py  test_mmwave_serial.py  test_pipeline.py  test_sync.py
