[project]
name = "sandevistan"
version = "0.1.0"
description = "Research prototype scaffolding for Wi-Fi and vision fusion tracking."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sandevistan Contributors" }]

[project.scripts]
sandevistan-cli = "sandevistan.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
